test/langtools/tools/javac/patterns/declarations/OverloadedPatternDeclarationErrors.out
OverloadedPatternDeclarationErrors.java:13:26: compiler.err.no.compatible.matcher.found
OverloadedPatternDeclarationErrors.java:20:26: compiler.err.matcher.overloading.ambiguity
- compiler.note.preview.filename: OverloadedPatternDeclarationErrors.java, DEFAULT
- compiler.note.preview.recompile
2 errors